
perdition
Mail retrieval proxy server
Copyright (C) 1999-2003  Horms <horms@verge.net.au>
----------------------------------------------------------------------

XXX
(Horms)
   * 1.11beta3 unreleased
   - Added option to limit the chain length used when verifying certificates
   - Cleaned up build when compiled without SSL
   - Options to Handle self-signed and non-current certificates

----------------------------------------------------------------------

8th January 2002
(Horms)
   * 1.11beta2
   - Fixed handling of POP3 CAPA command
   - Cleaned up perditiondb(5) man page
   - Fixed packaging

----------------------------------------------------------------------

27th December 2002
(Horms)
   * 1.11beta1
   - Added Berkely DB map library contributed by Chris Stratford
   - Default db file for GDBM libary is now perdition.gdbm.db
   - Added TLS support. Thanks to Wolfgang Breyha
   - Fixed error in help and invocation in .spec file of
     the with-ldap-schema-directory configure option
   - Use loging convenicence macros provided by libvanessa_logger
     rather than providing our own.
   - Fixed bug in username mangling code, whereby the original username
     could be freed and subsequently become corupted. Effects
     the --lower_case, -S|--strip_domain and -A|--add_domain
     options.
   - Fixed bug where connection to server may be closed twice
     resulting in an unecssesary debuging message.
   - No longer missinterpates some ssl shutdowns as errors.
   - Reconciled protocol numbers when compiled without SSL.
     Thanks to Yiu <khyiu@hk.quamnet.com>
   - Minor correction to documentation of regular expression
     back references. Atif Ghaffar <aghaffar@developer.ch>
   - LDAP URL may contain myltiple occurances of the lookup
     key. David Morton <mortonda@osprey.net>
   - Increased my autoconf-foo so defines in acconfig.h actually
     work as expected (with more recent versions of autoconf ?)