@@ -11,6 +11,8 @@ XXX
    - Added option to limit the chain length used when verifying certificates
    - Cleaned up build when compiled without SSL
    - Options to Handle self-signed and non-current certificates
+   - Use SSL_CTX_use_certificate_chain_file(3) instead of 
+     SSL_CTX_use_certificate_file() to load certificates. Don Kozlowski
 
 ----------------------------------------------------------------------
 
